--- a/common/src/main/resources/assets/simplyswords/lang/ja_jp.json
+++ b/common/src/main/resources/assets/simplyswords/lang/ja_jp.json
@@ -108,6 +108,11 @@
   "item.simplyswords.tainted_relic":"汚れたレリック",
   "item.simplyswords.righteous_relic":"正義のレリック",
   "item.simplyswords.whisperwind":"ささやく風",
+  "item.simplyswords.emberlash":                                                                                        "エンバーラッシュ",
+  "item.simplyswords.waxweaver":                                                                                        "ワックスウィーバー",
+  "item.simplyswords.hiveheart":                                                                                        "ハイブハート",
+  "item.simplyswords.stars_edge":                                                                                       "スターズエッジ",
+  "item.simplyswords.wickpiercer":                                                                                      "ウィックピアサー",
 
   "item.simplyswords.runic_tablet": "ルーンの刻まれた記された石板",
   "item.simplyswords.runefused_gem": "ルーンが記された宝石",
@@ -692,6 +697,50 @@
   "item.simplyswords.whisperwindsworditem.tooltip5":"ダッシュ後に突撃した敵に大ダメージを追加で与える",
   "item.simplyswords.whisperwindsworditem.tooltip6":"なお、終了時発するにダメージは",
   "item.simplyswords.whisperwindsworditem.tooltip7":"ダッシュ時のダメージを与えた敵の数に応じてダメージが多くなる",
+  "item.simplyswords.emberlashsworditem.tooltip1":                                                                      "固有スキル: 燻りし剣",
+  "item.simplyswords.emberlashsworditem.tooltip2":                                                                      "この剣で攻撃した敵はは燻る",
+  "item.simplyswords.emberlashsworditem.tooltip3":                                                                      "燻りの効果を受けた敵を攻撃すると、",
+  "item.simplyswords.emberlashsworditem.tooltip4":                                                                      "効果の蓄積ごとに",
+  "item.simplyswords.emberlashsworditem.tooltip5":                                                                      "追加で%dダメージを与える",
+  "item.simplyswords.emberlashsworditem.tooltip6":                                                                      "傷を焼灼しながら後方に回避し、",
+  "item.simplyswords.emberlashsworditem.tooltip7":                                                                      "最大HPの%d%%を回復する",
+
+  "item.simplyswords.waxweaversworditem.tooltip1":                                                                      "固有スキル: 蝋織り",
+  "item.simplyswords.waxweaversworditem.tooltip2":                                                                      "炎上した敵を攻撃すると",
+  "item.simplyswords.waxweaversworditem.tooltip3":                                                                      "攻撃速度と攻撃力が上昇する",
+  "item.simplyswords.waxweaversworditem.tooltip4":                                                                      "あなたが死ぬと、",
+  "item.simplyswords.waxweaversworditem.tooltip5":                                                                      "代わりに再生ワックスが染み込み、",
+  "item.simplyswords.waxweaversworditem.tooltip6":                                                                      "完全に回復し、",
+  "item.simplyswords.waxweaversworditem.tooltip7":                                                                      "短期間の衝撃吸収を与える",
+  "item.simplyswords.waxweaversworditem.tooltip8":                                                                      "この効果はメインハンドにもって無いと発動せず",
+  "item.simplyswords.waxweaversworditem.tooltip9":                                                                      "%d秒のクールタイムがある",
+
+  "item.simplyswords.hiveheartsworditem.tooltip1":                                                                      "固有スキル: 蜂を操りし大槌",
+  "item.simplyswords.hiveheartsworditem.tooltip2":                                                                      "ヒットすると怒った蜂を放ち、",
+  "item.simplyswords.hiveheartsworditem.tooltip3":                                                                      "敵をを刺して",
+  "item.simplyswords.hiveheartsworditem.tooltip4":                                                                      "消える",
+  "item.simplyswords.hiveheartsworditem.tooltip5":                                                                      "この効果は %d秒ごとに",
+  "item.simplyswords.hiveheartsworditem.tooltip6":                                                                      "1回発生する",
+  "item.simplyswords.hiveheartsworditem.tooltip7":                                                                      "ミツバチは再生ハチミツの生産に集中し、",
+  "item.simplyswords.hiveheartsworditem.tooltip8":                                                                      "時間の経過とともにあなたを癒すが、",
+  "item.simplyswords.hiveheartsworditem.tooltip9":                                                                      "固有スキルは",
+  "item.simplyswords.hiveheartsworditem.tooltip10":                                                                     "クールダウン状態になる",
+
+  "item.simplyswords.starsedgesworditem.tooltip1":                                                                      "固有スキル: 天与の刃",
+  "item.simplyswords.starsedgesworditem.tooltip2":                                                                      "日中、この剣の攻撃は",
+  "item.simplyswords.starsedgesworditem.tooltip3":                                                                      "%s の追加ダメージを与える",
+  "item.simplyswords.starsedgesworditem.tooltip4":                                                                      "夜になると、この攻撃した敵の体力を吸収する",
+  "item.simplyswords.starsedgesworditem.tooltip5":                                                                      "スピードを上げながら後方に回避する",
+  "item.simplyswords.starsedgesworditem.tooltip6":                                                                      "2 回目に使うと",
+  "item.simplyswords.starsedgesworditem.tooltip7":                                                                      "前方にダッシュし、耐性と",
+  "item.simplyswords.starsedgesworditem.tooltip8":                                                                      "攻撃速度が上昇する",
+
+  "item.simplyswords.wickpiercersworditem.tooltip1":                                                                    "固有スキル: 揺らめく怒り",
+  "item.simplyswords.wickpiercersworditem.tooltip2":                                                                    "心に怒りを植え付け、",
+  "item.simplyswords.wickpiercersworditem.tooltip3":                                                                    "攻撃速度を大幅に",
+  "item.simplyswords.wickpiercersworditem.tooltip4":                                                                    "上昇させ",
+  "item.simplyswords.wickpiercersworditem.tooltip5":                                                                    "ウィックピアサーの各攻撃を",
+  "item.simplyswords.wickpiercersworditem.tooltip6":                                                                    "%ds秒のの間 2 回ヒットできるようにする",
 
 
   "item.simplyswords.levitationsworditem.tooltip1": "ルーンの刻まれた能力:浮遊",
