--- a/common/src/main/resources/assets/simplyswords/lang/ja_jp.json
+++ b/common/src/main/resources/assets/simplyswords/lang/ja_jp.json
@@ -740,7 +740,7 @@
   "item.simplyswords.wickpiercersworditem.tooltip3":                                                                    "攻撃速度を大幅に",
   "item.simplyswords.wickpiercersworditem.tooltip4":                                                                    "上昇させ",
   "item.simplyswords.wickpiercersworditem.tooltip5":                                                                    "ウィックピアサーの各攻撃を",
-  "item.simplyswords.wickpiercersworditem.tooltip6":                                                                    "%ds秒のの間 2 回ヒットできるようにする",
+  "item.simplyswords.wickpiercersworditem.tooltip6":                                                                    "%d秒のの間2回ヒットできるようにする",
 
 
   "item.simplyswords.levitationsworditem.tooltip1": "ルーンの刻まれた能力:浮遊",
